# cpp-utility-monad

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: utility-monad-tester.cpp  utility-monad-tester.hpp  utility-monadic.ixx
